--- a/app/Resources/views/centre/ouverture.html.twig
+++ b/app/Resources/views/centre/ouverture.html.twig
@@ -58,7 +58,7 @@
                     <td>{{ chaine.caisse.soldeInitial|number_format(0, ',', ' ') }}</td>
                     <td>{% if chaine.caisse.getAffectationActive %}{{ chaine.caisse.getAffectationActive.agent.username }}{% else %}Pas d'agent affecté{%endif%}</td>
                     <td>{{ chaine.piste.numero }}</td>
-                    <td>{% if chaine.piste.getAffectationActive %}{{ chaine.piste.getAffectationActive.agent.username }}{% else %}Pas d'agent affecté{%endif%}</td>
+                    <td>{% if chaine.piste.affectationsActives is not empty %}{% for affectation in chaine.piste.affectationsActives %}{{ affectation.agent.username }}<br/>{%endfor%}{% else %}Pas d'agent affecté{%endif%}</td>
                 </tr>
             {% endfor %}
             </tbody>
