--- a/app/Resources/views/visite/show.html.twig
+++ b/app/Resources/views/visite/show.html.twig
@@ -55,7 +55,7 @@
             </tr>
             <tr>
                 <th>Type de visite</th>
-                <td>{% if visite.contreVisite %} Contre visite {% elseif if visite.revisite %}Revisite{% else %}Normale{% endif %}</td>
+                <td>{% if visite.contreVisite %} Contre visite {% elseif visite.revisite %}Revisite{% else %}Normale{% endif %}</td>
             </tr>
             <tr>
                 <th>Créé par</th>
