--- a/app/Resources/views/affectationpiste/index.html.twig
+++ b/app/Resources/views/affectationpiste/index.html.twig
@@ -26,11 +26,8 @@
         <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
             <thead>
                 <tr>
-                    <th>Agent</th>
                     <th>Piste</th>
-                    <th>Statut</th>
-                    <th>Date</th>
-                    <th>Actions</th>
+                    <th>Controlleurs</th>
                 </tr>
             </thead>
             <tbody>
@@ -38,11 +35,8 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <th>Agent</th>
                     <th>Piste</th>
-                    <th>Statut</th>
-                    <th>Date</th>
-                    <th>Actions</th>
+                    <th>Controlleurs</th>
                 </tr>
             </tfoot>
         </table>
@@ -54,7 +48,7 @@
 
         $('#liste_clients').DataTable({
             "columnDefs": [
-            { "orderable": false, "targets": 4 }
+            { "orderable": false, "targets": 1 }
         ],
         "processing": true,
         "serverSide": true,
