Affichage du répertoire maha pour chaque piste

--- a/app/Resources/views/piste/show.html.twig
+++ b/app/Resources/views/piste/show.html.twig
@@ -38,6 +38,10 @@
                 <td>{% if piste.actif %}Active{% else %}Inactive{% endif %}</td>
             </tr>
             <tr>
+                <th>Répertoire MAHA</th>
+                <td>piste.repertoire</td>
+            </tr>
+            <tr>
                 <th>Créé par</th>
                 <td>{{ piste.creePar }}</td>
             </tr>
