--- a/app/Resources/views/piste/index.html.twig
+++ b/app/Resources/views/piste/index.html.twig
@@ -29,6 +29,7 @@
                 <tr>
                     <th>Numéro</th>
                     <th>Etat</th>
+                    <th>Répertoire</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -39,6 +40,7 @@
                 <tr>
                     <th>Numéro</th>
                     <th>Etat</th>
+                    <th>Répertoire</th>
                     <th>Actions</th>
                 </tr>
             </tfoot>
