Affichage du répertoire maha pour chaque piste

--- a/app/Resources/views/piste/show.html.twig
+++ b/app/Resources/views/piste/show.html.twig
@@ -39,7 +39,7 @@
             </tr>
             <tr>
                 <th>Répertoire MAHA</th>
-                <td>piste.repertoire</td>
+                <td>{{ piste.repertoire }}</td>
             </tr>
             <tr>
                 <th>Créé par</th>
