--- a/app/Resources/views/parametres/menu.html.twig
+++ b/app/Resources/views/parametres/menu.html.twig
@@ -60,7 +60,7 @@
         </li>
         <li class="nav-item {% block menu_codemaharesultat_open %}{% endblock %}">
             <a class="nav-link {% block menu_codemaharesultat_actif %}{% endblock %}" href="{{ path('admin_parametres_codemaharesultat_index') }}">
-            <i class="nav-icon icon-list"></i> Codes des Résultats MAHA</a>
+            <i class="nav-icon icon-list"></i> Résultats MAHA</a>
         </li>
         <li class="nav-item {% block menu_vehiculemaha_open %}{% endblock %}">
             <a class="nav-link {% block menu_vehiculemaha_actif %}{% endblock %}" href="#">
