Menu code des résultats maha renommé en interprétation On affiche maintenant la valeur du resultat dans le rapport de visite Changement du système de controle Lecture des résultats maha

--- a/app/Resources/views/codemaharesultat/index.html.twig
+++ b/app/Resources/views/codemaharesultat/index.html.twig
@@ -28,8 +28,8 @@
                 <tr>
                     <th>CONTROLE</th>
                     <th>Libellé</th>
-                    <th>Code</th>
-                    <th>TYPE</th>
+                    <th>Valeur ou intervalle</th>
+                    <th>Type</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -40,8 +40,8 @@
                 <tr>
                     <th>CONTROLE</th>
                     <th>Libellé</th>
-                    <th>Code</th>
-                    <th>TYPE</th>
+                    <th>Valeur ou intervalle</th>
+                    <th>Type</th>
                     <th>Actions</th>
                 </tr>
             </tfoot>
