--- a/app/Resources/views/controle/index.html.twig
+++ b/app/Resources/views/controle/index.html.twig
@@ -27,6 +27,7 @@
         <table id="liste_clients" cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered datatable dataTable no-footer">
             <thead>
                 <tr>
+                    <th>Catégorie</th>
                     <th>Libellé</th>
                     <th>Code</th>
                     <th>Type</th>
@@ -39,6 +40,7 @@
             </tbody>
             <thead>
                 <tr>
+                    <th>Catégorie</th>
                     <th>Libellé</th>
                     <th>Code</th>
                     <th>Type</th>
