--- a/app/Resources/views/default/volet2.html.twig
+++ b/app/Resources/views/default/volet2.html.twig
@@ -1,6 +1,6 @@
 <table width="600px">
     <tr>
-    <td>Logo MTS</td>
+    <td><img src="{{ asset('images/mts.jpg', absolute=true) }}" /></td>
     <td>N&deg; {{ visite.numeroCertificat }}</td>
     </tr>
     <tr>
