--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1851,8 +1851,8 @@ pre code {
 }
 
 .form-control {
-  display: block;
-  width: 100%;
+  width: auto;
+  margin-left: 5px;
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
   font-size: 0.875rem;
@@ -1864,6 +1864,10 @@ pre code {
   border: 1px solid #e4e7ea;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+select{
+    margin-left: 5px;
 }
 
 @media (prefers-reduced-motion: reduce) {
