Format adapté a l'impression - test 1

--- a/app/Resources/views/default/certificat.html.twig
+++ b/app/Resources/views/default/certificat.html.twig
@@ -1,4 +1,4 @@
-<table width="600px">
+<table width="11.5cm" height="11.5cm" style="max-height:6.5cm;min-height: 6.5cm;overflow: hidden">
     <tr>
     <td>CERTIFICAT DE VISITE TECHNIQUE</td>
     <td>N&deg; {{ visite.numeroCertificat }}</td>
@@ -27,7 +27,7 @@
     </tr>
 </table>
     
-<table width="600px">
+<table width="11.5cm" height="11.5cm" style="max-height:6.5cm;min-height: 6.5cm;overflow: hidden">
     <tr>
     <td><img src="{{ asset('images/mts.jpg', absolute=true) }}" /></td>
     <td>N&deg; {{ visite.numeroCertificat }}</td>
