--- a/app/Resources/views/default/volet2.html.twig
+++ b/app/Resources/views/default/volet2.html.twig
@@ -1,4 +1,4 @@
-<table width="600px">
+<table width="11.5cm" height="11.5cm" style="max-height:6.5cm;min-height: 6.5cm;overflow: hidden">
     <tr>
     <td><img src="{{ asset('images/mts.jpg', absolute=true) }}" /></td>
     <td>N&deg; {{ visite.numeroCertificat }}</td>
