--- a/app/Resources/views/visite/show.delivrance.html.twig
+++ b/app/Resources/views/visite/show.delivrance.html.twig
@@ -17,9 +17,9 @@
 {% block actions %}
     {% if is_granted('ROLE_DELIVRANCE') %}
         <label class="btn btn-outline-secondary"><a href="{{ path('visite_delivrance') }}">LISTE DELIVRANCE</a></label>
-        <label class="btn btn-outline-secondary"><a  href="#" target="_blank"onclick="printDiv('rapport')">IMPRIMER</a></label>
+        <label class="btn btn-outline-secondary"><a  href="#" onclick="printDiv('rapport')">IMPRIMER</a></label>
         {% if visite.statut == 2 or visite.statut == 4 %}
-            <label class="btn btn-outline-secondary"><a target="_blank" onclick="printDiv('certificat')" href="#">CERTIFICAT</a></label>
+            <label class="btn btn-outline-secondary"><a onclick="printDiv('certificat')" href="#">CERTIFICAT</a></label>
         {% endif %}
     {% endif %}
 {% endblock %}
@@ -88,83 +88,25 @@
             
                 </div>
 <div id="certificat">
-    <table width="600px">
-    <tr>
-    <td>CERTIFICAT DE VISITE TECHNIQUE</td>
-    <td>N&deg; {{ visite.numeroCertificat }}</td>
-    </tr>
-    <tr>
-        <td colspan="2"><img src="{{ asset('images/mts.jpg', absolute=true) }}" /></td>
-    </tr>
-    <tr>
-        <td>Nom : {{ visite.vehicule.proprietaire.prenom }} {{ visite.vehicule.proprietaire.nom }}</td>
-        <td>Date de validit&eacute; : {{ visite.date|date('Y-m-d') }}</td>
-    </tr>
-    <tr>
-        <td>Adresse : {{ visite.vehicule.proprietaire.adresse }}</td>
-        <td>Date de la visite : {{ visite.dateValidite|date('Y-m-d') }}</td>
-    </tr>
-    <tr>
-        <td>Immatriculation : {{ visite.vehicule.immatriculation }}</td>
-        <td>1ere mise en circulation : {{ visite.vehicule.dateMiseCirculation|date('Y-m-d') }}</td>
-    </tr>
-    <tr>
-        <td>N&deg; S&eacute;rie : {{ visite.vehicule.typeChassis }}</td>
-        <td>Marque/Type : {{ visite.vehicule.modele.marque.libelle }}/{{ visite.vehicule.modele.libelle }}</td>
-    </tr>
-    <tr>
-        <td colspan="2">Cachet MTS : </td>
-    </tr>
-</table>
-    
-    <table width="600px">
-    <tr>
-    <td>CERTIFICAT DE VISITE TECHNIQUE</td>
-    <td>N&deg; {{ visite.numeroCertificat }}</td>
-    </tr>
-    <tr>
-        <td colspan="2"><img src="{{ asset('images/mts.jpg', absolute=true) }}" /></td>
-    </tr>
-    <tr>
-        <td>Nom : {{ visite.vehicule.proprietaire.prenom }} {{ visite.vehicule.proprietaire.nom }}</td>
-        <td>Date de validit&eacute; : {{ visite.date|date('Y-m-d') }}</td>
-    </tr>
-    <tr>
-        <td>Adresse : {{ visite.vehicule.proprietaire.adresse }}</td>
-        <td>Date de la visite : {{ visite.dateValidite|date('Y-m-d') }}</td>
-    </tr>
-    <tr>
-        <td>Immatriculation : {{ visite.vehicule.immatriculation }}</td>
-        <td>1ere mise en circulation : {{ visite.vehicule.dateMiseCirculation|date('Y-m-d') }}</td>
-    </tr>
-    <tr>
-        <td>N&deg; S&eacute;rie : {{ visite.vehicule.typeChassis }}</td>
-        <td>Marque/Type : {{ visite.vehicule.modele.marque.libelle }}/{{ visite.vehicule.modele.libelle }}</td>
-    </tr>
-    <tr>
-        <td colspan="2">Cachet MTS : </td>
-    </tr>
-</table>
-    
-<table width="600px">
-    <tr>
-    <td><img src="{{ asset('images/mts.jpg', absolute=true) }}" /></td>
-    <td>N&deg; {{ visite.numeroCertificat }}</td>
-    </tr>
-    <tr>
-        <td colspan="2">CONTROLE TECHNIQUE</td>
-    </tr>
-    <tr>
-        <td colspan="2">Date limite de validit&eacute;</td>
-    </tr>
-
-    <tr>
-        <td colspan="2">{{ visite.vehicule.immatriculation}}</td>
-    </tr>
-    <tr>
-        <td colspan="2">{{ visite.date|date('Y-m-d') }}</td>
-    </tr>
-</table>
+    <div style="width:11.5cm; height: 7cm;overflow: hidden;">
+        <span style="float:right">{{ visite.numeroCertificat }}</span>
+        <div style="margin-top:1.5cm;margin-left:1.3cm"><div style="display: inline-block;width: 7.5cm">{{ visite.vehicule.proprietaire.prenom }} {{ visite.vehicule.proprietaire.nom }}</div><span>{{ visite.date|date('Y-m-d') }}</span></div>
+        <div style="margin-top:1mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.5cm">{{ visite.vehicule.proprietaire.adresse }}</div><span>{{ visite.dateValidite|date('Y-m-d') }}</span></div>
+        <div style="margin-top:5mm;margin-left:2.5cm"><div style="display: inline-block;width: 6.5cm">{{ visite.vehicule.immatriculation }}</div><span>{{ visite.vehicule.dateMiseCirculation|date('Y-m-d') }}</span></div>
+        <div style="margin-top:1mm;margin-left:1.8cm">{{ visite.vehicule.typeChassis }}</div>
+    </div>
+    <div style="width:11.5cm; height: 7cm;overflow: hidden;">
+        <span style="float:right">{{ visite.numeroCertificat }}</span>
+        <div style="margin-top:1.5cm;margin-left:1.3cm"><div style="display: inline-block;width: 7.5cm">{{ visite.vehicule.proprietaire.prenom }} {{ visite.vehicule.proprietaire.nom }}</div><span>{{ visite.date|date('Y-m-d') }}</span></div>
+        <div style="margin-top:1mm;margin-left:1.8cm"><div style="display: inline-block;width: 6.5cm">{{ visite.vehicule.proprietaire.adresse }}</div><span>{{ visite.dateValidite|date('Y-m-d') }}</span></div>
+        <div style="margin-top:5mm;margin-left:2.5cm"><div style="display: inline-block;width: 6.5cm">{{ visite.vehicule.immatriculation }}</div><span>{{ visite.vehicule.dateMiseCirculation|date('Y-m-d') }}</span></div>
+        <div style="margin-top:1mm;margin-left:1.8cm">{{ visite.vehicule.typeChassis }}</div>
+    </div>
+    <div style="width:11.5cm; height: 7cm;overflow: hidden;">
+        <div style="margin-top:1.5cm;margin-left:6cm">{{ visite.numeroCertificat }}</div>
+        <div style="margin-top:1.5cm;text-align: center">{{ visite.vehicule.immatriculation}}</div>
+        <div style="margin-top:1.5cm;text-align: center">{{ visite.dateValidite|date('Y-m-d') }}</div>
+    </div>
 </div>
     
 {% endblock %}
@@ -184,7 +126,7 @@
 
   newWin.document.close();
 
-  setTimeout(function(){newWin.close();},10);
+  
 
 }
 </script>
